# LaoA

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  data_service.py  finshare_provider.py  main.py
backend/tests/: test_data_service.py  test_finshare_provider.py  test_main.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  styles.css
frontend/src/components/: Chart.jsx
frontend/src/hooks/: useDashboard.js
frontend/src/lib/: format.js
scripts/: vercel-build.sh
