[project]
name = "laoa"
version = "0.1.0"
description = "A-share market panorama dashboard"
requires-python = ">=3.12"
dependencies = [
  "typing-extensions==4.16.0",
  "fastapi==0.136.0",
  "starlette==1.0.0",
  "pydantic==2.12.5",
  "uvicorn==0.44.0",
  "requests==2.32.5",
  "finshare==2.1.0",
]

[tool.vercel]
entrypoint = "api.index:app"

[tool.vercel.scripts]
build = "bash scripts/vercel-build.sh"
